# plato-math

./: AGENT.md  Cargo.toml  README.md
src/: lib.rs
